cmake_minimum_required(VERSION 3.1)
project(bomberman)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ILibBomberman_linux_x64/includes/ -W -Wall -Wextra -Werror")

set(SOURCE_FILES
    LibBomberman_linux_x64/includes/GL/glew.h
    LibBomberman_linux_x64/includes/GL/glxew.h
    LibBomberman_linux_x64/includes/GL/wglew.h
    LibBomberman_linux_x64/includes/glm/CMakeFiles/CompilerIdC/CMakeCCompilerId.c
    LibBomberman_linux_x64/includes/glm/CMakeFiles/CompilerIdCXX/CMakeCXXCompilerId.cpp
    LibBomberman_linux_x64/includes/glm/core/_detail.hpp
    LibBomberman_linux_x64/includes/glm/core/_fixes.hpp
    LibBomberman_linux_x64/includes/glm/core/_swizzle.hpp
    LibBomberman_linux_x64/includes/glm/core/_swizzle_func.hpp
    LibBomberman_linux_x64/includes/glm/core/_vectorize.hpp
    LibBomberman_linux_x64/includes/glm/core/dummy.cpp
    LibBomberman_linux_x64/includes/glm/core/func_common.hpp
    LibBomberman_linux_x64/includes/glm/core/func_exponential.hpp
    LibBomberman_linux_x64/includes/glm/core/func_geometric.hpp
    LibBomberman_linux_x64/includes/glm/core/func_integer.hpp
    LibBomberman_linux_x64/includes/glm/core/func_matrix.hpp
    LibBomberman_linux_x64/includes/glm/core/func_noise.hpp
    LibBomberman_linux_x64/includes/glm/core/func_packing.hpp
    LibBomberman_linux_x64/includes/glm/core/func_trigonometric.hpp
    LibBomberman_linux_x64/includes/glm/core/func_vector_relational.hpp
    LibBomberman_linux_x64/includes/glm/core/hint.hpp
    LibBomberman_linux_x64/includes/glm/core/intrinsic_common.hpp
    LibBomberman_linux_x64/includes/glm/core/intrinsic_exponential.hpp
    LibBomberman_linux_x64/includes/glm/core/intrinsic_geometric.hpp
    LibBomberman_linux_x64/includes/glm/core/intrinsic_matrix.hpp
    LibBomberman_linux_x64/includes/glm/core/intrinsic_trigonometric.hpp
    LibBomberman_linux_x64/includes/glm/core/intrinsic_vector_relational.hpp
    LibBomberman_linux_x64/includes/glm/core/setup.hpp
    LibBomberman_linux_x64/includes/glm/core/type.hpp
    LibBomberman_linux_x64/includes/glm/core/type_float.hpp
    LibBomberman_linux_x64/includes/glm/core/type_gentype.hpp
    LibBomberman_linux_x64/includes/glm/core/type_half.hpp
    LibBomberman_linux_x64/includes/glm/core/type_int.hpp
    LibBomberman_linux_x64/includes/glm/core/type_mat.hpp
    LibBomberman_linux_x64/includes/glm/core/type_mat2x2.hpp
    LibBomberman_linux_x64/includes/glm/core/type_mat2x3.hpp
    LibBomberman_linux_x64/includes/glm/core/type_mat2x4.hpp
    LibBomberman_linux_x64/includes/glm/core/type_mat3x2.hpp
    LibBomberman_linux_x64/includes/glm/core/type_mat3x3.hpp
    LibBomberman_linux_x64/includes/glm/core/type_mat3x4.hpp
    LibBomberman_linux_x64/includes/glm/core/type_mat4x2.hpp
    LibBomberman_linux_x64/includes/glm/core/type_mat4x3.hpp
    LibBomberman_linux_x64/includes/glm/core/type_mat4x4.hpp
    LibBomberman_linux_x64/includes/glm/core/type_size.hpp
    LibBomberman_linux_x64/includes/glm/core/type_vec.hpp
    LibBomberman_linux_x64/includes/glm/core/type_vec1.hpp
    LibBomberman_linux_x64/includes/glm/core/type_vec2.hpp
    LibBomberman_linux_x64/includes/glm/core/type_vec3.hpp
    LibBomberman_linux_x64/includes/glm/core/type_vec4.hpp
    LibBomberman_linux_x64/includes/glm/gtc/constants.hpp
    LibBomberman_linux_x64/includes/glm/gtc/epsilon.hpp
    LibBomberman_linux_x64/includes/glm/gtc/half_float.hpp
    LibBomberman_linux_x64/includes/glm/gtc/matrix_access.hpp
    LibBomberman_linux_x64/includes/glm/gtc/matrix_integer.hpp
    LibBomberman_linux_x64/includes/glm/gtc/matrix_inverse.hpp
    LibBomberman_linux_x64/includes/glm/gtc/matrix_transform.hpp
    LibBomberman_linux_x64/includes/glm/gtc/noise.hpp
    LibBomberman_linux_x64/includes/glm/gtc/quaternion.hpp
    LibBomberman_linux_x64/includes/glm/gtc/random.hpp
    LibBomberman_linux_x64/includes/glm/gtc/reciprocal.hpp
    LibBomberman_linux_x64/includes/glm/gtc/swizzle.hpp
    LibBomberman_linux_x64/includes/glm/gtc/type_precision.hpp
    LibBomberman_linux_x64/includes/glm/gtc/type_ptr.hpp
    LibBomberman_linux_x64/includes/glm/gtc/ulp.hpp
    LibBomberman_linux_x64/includes/glm/gtx/associated_min_max.hpp
    LibBomberman_linux_x64/includes/glm/gtx/bit.hpp
    LibBomberman_linux_x64/includes/glm/gtx/closest_point.hpp
    LibBomberman_linux_x64/includes/glm/gtx/color_cast.hpp
    LibBomberman_linux_x64/includes/glm/gtx/color_space.hpp
    LibBomberman_linux_x64/includes/glm/gtx/color_space_YCoCg.hpp
    LibBomberman_linux_x64/includes/glm/gtx/compatibility.hpp
    LibBomberman_linux_x64/includes/glm/gtx/component_wise.hpp
    LibBomberman_linux_x64/includes/glm/gtx/constants.hpp
    LibBomberman_linux_x64/includes/glm/gtx/epsilon.hpp
    LibBomberman_linux_x64/includes/glm/gtx/euler_angles.hpp
    LibBomberman_linux_x64/includes/glm/gtx/extend.hpp
    LibBomberman_linux_x64/includes/glm/gtx/extented_min_max.hpp
    LibBomberman_linux_x64/includes/glm/gtx/fast_exponential.hpp
    LibBomberman_linux_x64/includes/glm/gtx/fast_square_root.hpp
    LibBomberman_linux_x64/includes/glm/gtx/fast_trigonometry.hpp
    LibBomberman_linux_x64/includes/glm/gtx/gradient_paint.hpp
    LibBomberman_linux_x64/includes/glm/gtx/handed_coordinate_space.hpp
    LibBomberman_linux_x64/includes/glm/gtx/inertia.hpp
    LibBomberman_linux_x64/includes/glm/gtx/int_10_10_10_2.hpp
    LibBomberman_linux_x64/includes/glm/gtx/integer.hpp
    LibBomberman_linux_x64/includes/glm/gtx/intersect.hpp
    LibBomberman_linux_x64/includes/glm/gtx/log_base.hpp
    LibBomberman_linux_x64/includes/glm/gtx/matrix_cross_product.hpp
    LibBomberman_linux_x64/includes/glm/gtx/matrix_interpolation.hpp
    LibBomberman_linux_x64/includes/glm/gtx/matrix_major_storage.hpp
    LibBomberman_linux_x64/includes/glm/gtx/matrix_operation.hpp
    LibBomberman_linux_x64/includes/glm/gtx/matrix_query.hpp
    LibBomberman_linux_x64/includes/glm/gtx/mixed_product.hpp
    LibBomberman_linux_x64/includes/glm/gtx/multiple.hpp
    LibBomberman_linux_x64/includes/glm/gtx/noise.hpp
    LibBomberman_linux_x64/includes/glm/gtx/norm.hpp
    LibBomberman_linux_x64/includes/glm/gtx/normal.hpp
    LibBomberman_linux_x64/includes/glm/gtx/normalize_dot.hpp
    LibBomberman_linux_x64/includes/glm/gtx/number_precision.hpp
    LibBomberman_linux_x64/includes/glm/gtx/ocl_type.hpp
    LibBomberman_linux_x64/includes/glm/gtx/optimum_pow.hpp
    LibBomberman_linux_x64/includes/glm/gtx/orthonormalize.hpp
    LibBomberman_linux_x64/includes/glm/gtx/perpendicular.hpp
    LibBomberman_linux_x64/includes/glm/gtx/polar_coordinates.hpp
    LibBomberman_linux_x64/includes/glm/gtx/projection.hpp
    LibBomberman_linux_x64/includes/glm/gtx/quaternion.hpp
    LibBomberman_linux_x64/includes/glm/gtx/random.hpp
    LibBomberman_linux_x64/includes/glm/gtx/raw_data.hpp
    LibBomberman_linux_x64/includes/glm/gtx/reciprocal.hpp
    LibBomberman_linux_x64/includes/glm/gtx/rotate_vector.hpp
    LibBomberman_linux_x64/includes/glm/gtx/simd_mat4.hpp
    LibBomberman_linux_x64/includes/glm/gtx/simd_vec4.hpp
    LibBomberman_linux_x64/includes/glm/gtx/spline.hpp
    LibBomberman_linux_x64/includes/glm/gtx/std_based_type.hpp
    LibBomberman_linux_x64/includes/glm/gtx/string_cast.hpp
    LibBomberman_linux_x64/includes/glm/gtx/transform.hpp
    LibBomberman_linux_x64/includes/glm/gtx/transform2.hpp
    LibBomberman_linux_x64/includes/glm/gtx/ulp.hpp
    LibBomberman_linux_x64/includes/glm/gtx/unsigned_int.hpp
    LibBomberman_linux_x64/includes/glm/gtx/vec1.hpp
    LibBomberman_linux_x64/includes/glm/gtx/vector_access.hpp
    LibBomberman_linux_x64/includes/glm/gtx/vector_angle.hpp
    LibBomberman_linux_x64/includes/glm/gtx/vector_query.hpp
    LibBomberman_linux_x64/includes/glm/gtx/verbose_operator.hpp
    LibBomberman_linux_x64/includes/glm/gtx/wrap.hpp
    LibBomberman_linux_x64/includes/glm/virtrev/xstream.hpp
    LibBomberman_linux_x64/includes/glm/ext.hpp
    LibBomberman_linux_x64/includes/glm/glm.hpp
    LibBomberman_linux_x64/includes/AShader.hh
    LibBomberman_linux_x64/includes/Attribute.hh
    LibBomberman_linux_x64/includes/BasicShader.hh
    LibBomberman_linux_x64/includes/begin_code.h
    LibBomberman_linux_x64/includes/Clock.hh
    LibBomberman_linux_x64/includes/close_code.h
    LibBomberman_linux_x64/includes/Game.hh
    LibBomberman_linux_x64/includes/Geometry.hh
    LibBomberman_linux_x64/includes/Input.hh
    LibBomberman_linux_x64/includes/IRenderContext.hh
    LibBomberman_linux_x64/includes/Model.hh
    LibBomberman_linux_x64/includes/OpenGL.hh
    LibBomberman_linux_x64/includes/SDL.h
    LibBomberman_linux_x64/includes/SDL_assert.h
    LibBomberman_linux_x64/includes/SDL_atomic.h
    LibBomberman_linux_x64/includes/SDL_audio.h
    LibBomberman_linux_x64/includes/SDL_bits.h
    LibBomberman_linux_x64/includes/SDL_blendmode.h
    LibBomberman_linux_x64/includes/SDL_clipboard.h
    LibBomberman_linux_x64/includes/SDL_config.h
    LibBomberman_linux_x64/includes/SDL_config_android.h
    LibBomberman_linux_x64/includes/SDL_config_iphoneos.h
    LibBomberman_linux_x64/includes/SDL_config_macosx.h
    LibBomberman_linux_x64/includes/SDL_config_minimal.h
    LibBomberman_linux_x64/includes/SDL_config_pandora.h
    LibBomberman_linux_x64/includes/SDL_config_psp.h
    LibBomberman_linux_x64/includes/SDL_config_windows.h
    LibBomberman_linux_x64/includes/SDL_config_winrt.h
    LibBomberman_linux_x64/includes/SDL_config_wiz.h
    LibBomberman_linux_x64/includes/SDL_copying.h
    LibBomberman_linux_x64/includes/SDL_cpuinfo.h
    LibBomberman_linux_x64/includes/SDL_egl.h
    LibBomberman_linux_x64/includes/SDL_endian.h
    LibBomberman_linux_x64/includes/SDL_error.h
    LibBomberman_linux_x64/includes/SDL_events.h
    LibBomberman_linux_x64/includes/SDL_filesystem.h
    LibBomberman_linux_x64/includes/SDL_gamecontroller.h
    LibBomberman_linux_x64/includes/SDL_gesture.h
    LibBomberman_linux_x64/includes/SDL_haptic.h
    LibBomberman_linux_x64/includes/SDL_hints.h
    LibBomberman_linux_x64/includes/SDL_joystick.h
    LibBomberman_linux_x64/includes/SDL_keyboard.h
    LibBomberman_linux_x64/includes/SDL_keycode.h
    LibBomberman_linux_x64/includes/SDL_loadso.h
    LibBomberman_linux_x64/includes/SDL_log.h
    LibBomberman_linux_x64/includes/SDL_main.h
    LibBomberman_linux_x64/includes/SDL_messagebox.h
    LibBomberman_linux_x64/includes/SDL_mouse.h
    LibBomberman_linux_x64/includes/SDL_mutex.h
    LibBomberman_linux_x64/includes/SDL_name.h
    LibBomberman_linux_x64/includes/SDL_opengl.h
    LibBomberman_linux_x64/includes/SDL_opengles.h
    LibBomberman_linux_x64/includes/SDL_opengles2.h
    LibBomberman_linux_x64/includes/SDL_pixels.h
    LibBomberman_linux_x64/includes/SDL_platform.h
    LibBomberman_linux_x64/includes/SDL_power.h
    LibBomberman_linux_x64/includes/SDL_quit.h
    LibBomberman_linux_x64/includes/SDL_rect.h
    LibBomberman_linux_x64/includes/SDL_render.h
    LibBomberman_linux_x64/includes/SDL_revision.h
    LibBomberman_linux_x64/includes/SDL_rwops.h
    LibBomberman_linux_x64/includes/SDL_scancode.h
    LibBomberman_linux_x64/includes/SDL_shape.h
    LibBomberman_linux_x64/includes/SDL_stdinc.h
    LibBomberman_linux_x64/includes/SDL_surface.h
    LibBomberman_linux_x64/includes/SDL_system.h
    LibBomberman_linux_x64/includes/SDL_syswm.h
    LibBomberman_linux_x64/includes/SDL_test.h
    LibBomberman_linux_x64/includes/SDL_test_assert.h
    LibBomberman_linux_x64/includes/SDL_test_common.h
    LibBomberman_linux_x64/includes/SDL_test_compare.h
    LibBomberman_linux_x64/includes/SDL_test_crc32.h
    LibBomberman_linux_x64/includes/SDL_test_font.h
    LibBomberman_linux_x64/includes/SDL_test_fuzzer.h
    LibBomberman_linux_x64/includes/SDL_test_harness.h
    LibBomberman_linux_x64/includes/SDL_test_images.h
    LibBomberman_linux_x64/includes/SDL_test_log.h
    LibBomberman_linux_x64/includes/SDL_test_md5.h
    LibBomberman_linux_x64/includes/SDL_test_random.h
    LibBomberman_linux_x64/includes/SDL_thread.h
    LibBomberman_linux_x64/includes/SDL_timer.h
    LibBomberman_linux_x64/includes/SDL_touch.h
    LibBomberman_linux_x64/includes/SDL_types.h
    LibBomberman_linux_x64/includes/SDL_version.h
    LibBomberman_linux_x64/includes/SDL_video.h
    LibBomberman_linux_x64/includes/SdlContext.hh
    LibBomberman_linux_x64/includes/Texture.hh
    LibBomberman_linux_x64/src/BasicShader.cpp
    LibBomberman_linux_x64/src/BasicShader.hh
    AObject.cpp
    AObject.hh
    Cube.cpp
    Cube.hh
    GameEngine.cpp
    GameEngine.hh
    main.cpp
    Model.cpp
    Model.hh
    Pos3f.cpp
    Pos3f.hh)

add_executable(bomberman ${SOURCE_FILES})